src/objects/ANG_ProgressBarSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Progress Bar Settings</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>Name of the field to be used in the SOQL Query</description>
        <label>Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Translatable__c</fullName>
        <label>Label Translatable</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>API Name of the label to display</description>
        <label>Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object name to use in SOQL Query</description>
        <label>Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>Record-type of the process (Defines a type of progress bar)</description>
        <label>Process Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueError__c</fullName>
        <description>Value of the field to display the node as with error.</description>
        <label>ValueError</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueOk__c</fullName>
        <description>Value of the field to display the node as OK</description>
        <label>ValueOk</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Progress Bar Settings</label>
</CustomObject>